--- a/bonus/index.html
+++ b/bonus/index.html
@@ -277,20 +277,113 @@
       </header>
       <!-- /. header -->
       <main>
-            <div class="jumbotron">
-                  <div class="container">            
-                        <div class="card">
-                              <img class="logo_return" src="./assets/img/returnal-hero-banner-logo.png" alt="">
-                              <div class="card-body">
-                                    <h5 class="card-title">Rompi il cerchio</h5>
-                                    <p class="card-text">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, in esclusiva su PS5.</p>
-                                    <button type="submit" class="btn btn-danger bg_important rounded-5">Acquista Ora</button>
+            <div id="jumbotron">            
+                        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                              <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                      <img src="./assets/img/jumbo-bg.png" class="d-block w-100" alt="...">
+                                      <div class="carousel-caption d-flex align-items-center">
+                                          <div class="card col-12 col-md-6 col-lg-4">
+                                                <img class="logo_return" src="./assets/img/returnal-hero-banner-logo.png" alt="">
+                                                <div class="card-body">
+                                                  <h5 class="card-title">Rompi il cerchio</h5>
+                                                  <p class="card-text">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, in esclusiva su PS5.</p>
+                                                  <a href="#" class="btn btn-danger rounded-5 bg_important">Acquista ora</a>
+                                                </div>
+                                              </div>
+                                        </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-flex align-items-center">
+                                          <div class="card col-12 col-md-6 col-lg-4">
+                                                <img class="logo_return" src="./assets/img/returnal-hero-banner-logo.png" alt="">
+                                                <div class="card-body">
+                                                  <h5 class="card-title">Rompi il cerchio</h5>
+                                                  <p class="card-text">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, in esclusiva su PS5.</p>
+                                                  <a href="#" class="btn btn-danger rounded-5 bg_important">Acquista ora</a>
+                                                </div>
+                                              </div>
+                                        </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./assets/img/jumbo-bg.png" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-flex align-items-center">
+                                          <div class="card col-12 col-md-6 col-lg-4">
+                                                <img class="logo_return" src="./assets/img/returnal-hero-banner-logo.png" alt="">
+                                                <div class="card-body">
+                                                  <h5 class="card-title">Rompi il cerchio</h5>
+                                                  <p class="card-text">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, in esclusiva su PS5.</p>
+                                                  <a href="#" class="btn btn-danger rounded-5 bg_important">Acquista ora</a>
+                                                </div>
+                                              </div>
+                                        </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-flex align-items-center">
+                                          <div class="card col-12 col-md-6 col-lg-4">
+                                                <img class="logo_return" src="./assets/img/returnal-hero-banner-logo.png" alt="">
+                                                <div class="card-body">
+                                                  <h5 class="card-title">Rompi il cerchio</h5>
+                                                  <p class="card-text">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, in esclusiva su PS5.</p>
+                                                  <a href="#" class="btn btn-danger rounded-5 bg_important">Acquista ora</a>
+                                                </div>
+                                              </div>
+                                        </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./assets/img/jumbo-bg.png" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-flex align-items-center">
+                                          <div class="card col-12 col-md-6 col-lg-4">
+                                                <img class="logo_return" src="./assets/img/returnal-hero-banner-logo.png" alt="">
+                                                <div class="card-body">
+                                                  <h5 class="card-title">Rompi il cerchio</h5>
+                                                  <p class="card-text">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, in esclusiva su PS5.</p>
+                                                  <a href="#" class="btn btn-danger rounded-5 bg_important">Acquista ora</a>
+                                                </div>
+                                              </div>
+                                        </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" class="d-block w-100" alt="...">
+                                    <div class="carousel-caption d-flex align-items-center">
+                                          <div class="card col-12 col-md-6 col-lg-4">
+                                                <img class="logo_return" src="./assets/img/returnal-hero-banner-logo.png" alt="">
+                                                <div class="card-body">
+                                                  <h5 class="card-title">Rompi il cerchio</h5>
+                                                  <p class="card-text">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, in esclusiva su PS5.</p>
+                                                  <a href="#" class="btn btn-danger rounded-5 bg_important">Acquista ora</a>
+                                                </div>
+                                              </div>
+                                        </div>
+                                </div>
                               </div>
-                        </div>
-                  </div>
+      
+                              <div class="carousel-indicators games">
+                                    
+                                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1">
+                                                      <img class="rounded-4" src="./assets/img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                                                </button>
+                                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2">
+                                                      <img class="rounded-4" src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                                                </button>
+                                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3">
+                                                      <img class="rounded-4" src="./assets/img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                                                </button>
+                                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" class="active" aria-current="true" aria-label="Slide 4">
+                                                      <img class="rounded-4" src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                                                </button>
+                                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5">
+                                                      <img class="rounded-4" src="./assets/img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                                                </button>
+                                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6">
+                                                      <img class="rounded-4" src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                                                </button>       
+                            </div>
             </div>
             <!-- /. jumbotron -->
-            <div class="games py-5">
+            <!-- <div class="games py-5">
                   <div class="container p-4">
                         <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6 g-2">
                               <div class="col rounded-4">
@@ -313,7 +406,7 @@
                               </div>
                         </div>
                   </div>
-            </div>
+            </div> -->
             <!-- /. games -->
             <div class="playstation_v my-5">
                   <div class="text-center">
